# mecanum_auto_sim

./: CMakeLists.txt  README.md  package.xml
config/: custom_nav2_params.yaml
launch/: simulation.launch.py
maps/: custom_room_map.pgm  custom_room_map.yaml
urdf/: nexus_4wd_mecanum.gazebo  nexus_4wd_mecanum.xacro  urm04_sensor.xacro
worlds/: enclosed_room.world
